[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cjm-fasthtml-step-progress"
dynamic = ["version"]
description = "A compact, theme-aware step progress bar component for FastHTML multi-step workflows."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Christian J. Mills", email = "9126128+cj-mills@users.noreply.github.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['python-fasthtml', 'cjm-fasthtml-app-core', 'cjm-fasthtml-tailwind', 'cjm-fasthtml-daisyui']

[project.urls]
Repository = "https://github.com/cj-mills/cjm-fasthtml-step-progress"
Documentation = "https://cj-mills.github.io/cjm-fasthtml-step-progress"

[project.entry-points.nbdev]
cjm_fasthtml_step_progress = "cjm_fasthtml_step_progress._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "cjm_fasthtml_step_progress.__version__"}

[tool.setuptools.packages.find]
include = ["cjm_fasthtml_step_progress"]

[tool.nbdev]
